--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,5 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.alibaba:fastjson:1.1.56.android'
-    compile project(':library')
+    compile project(':mvp')
 }
