--- a/mvp/src/main/AndroidManifest.xml
+++ b/mvp/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.liyunlong.mvp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.henley.mvp">
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
